--- a/composer.json
+++ b/composer.json
@@ -30,15 +30,19 @@
         }
     },
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "symfony/serializer": "^5.3"
     },
     "require-dev": {
+        "behat/behat": "^3.8",
         "friends-of-phpspec/phpspec-code-coverage": "^6.1",
         "friendsofphp/php-cs-fixer": "^3.1",
         "phpspec/phpspec": "^7.1",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^0.12.99",
+        "soyuka/contexts": "^3.3",
         "symfony/security": "^4.4",
+        "symfony/yaml": "^5.3",
         "vimeo/psalm": "^4.10"
     }
 }
