--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "autoload-dev": {
         "psr-4": {
             "Doyo\\Menu\\Tests\\": "tests/",
-            "spec\\Doyo\\Menu\\": "spec/"
+            "spec\\Doyo\\Menu\\": "spec/",
+            "App\\": "tests/Symfony/sandbox/src"
         }
     },
     "authors": [
@@ -35,13 +36,22 @@
     },
     "require-dev": {
         "behat/behat": "^3.8",
+        "friends-of-behat/mink-browserkit-driver": "^1.5",
+        "friends-of-behat/mink-extension": "^2.5",
+        "friends-of-behat/symfony-extension": "^2.2",
         "friends-of-phpspec/phpspec-code-coverage": "^6.1",
         "friendsofphp/php-cs-fixer": "^3.1",
         "phpspec/phpspec": "^7.1",
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan": "^0.12.99",
+        "phpstan/phpstan-symfony": "^0.12.44",
         "soyuka/contexts": "^3.3",
-        "symfony/security": "^4.4",
+        "symfony/dotenv": "^5.3",
+        "symfony/expression-language": "^5.3",
+        "symfony/framework-bundle": "^5.3",
+        "symfony/runtime": "^5.3",
+        "symfony/security-bundle": "^5.3",
+        "symfony/translation": "^4.4 || ^5.0",
         "symfony/yaml": "^5.3",
         "vimeo/psalm": "^4.10"
     }
