--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -204,3 +204,53 @@ jobs:
           flags: behat
           fail_ci_if_error: true
         continue-on-error: true
+
+  symfony:
+    name: Symfony (PHP ${{ matrix.php }})
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    strategy:
+      matrix:
+        php:
+          - '8.0'
+        include:
+          - php: '8.0'
+            coverage: true
+      fail-fast: false
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          extensions: intl, bcmath, curl, openssl, mbstring
+          ini-values: memory_limit=-1
+          tools: pecl, composer
+          coverage: pcov
+      - name: Cache Composer cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.composer/cache
+          key: composer-cache-php${{ matrix.php }}
+      - name: Enable code coverage
+        if: matrix.coverage
+        run: echo "COVERAGE=1" >> $GITHUB_ENV
+      - name: Install dependencies
+        run: composer update --prefer-dist --no-interaction --no-progress
+      - name: Run Spec Testing
+        run: |
+          if [ "$COVERAGE" = '1' ]; then
+            ./vendor/bin/behat -f progress -p symfony-coverage --colors --no-interaction --profile=coverage
+          else
+            ./vendor/bin/behat -f progress -p symfony --colors --no-interaction
+          fi
+      - name: Upload coverage results to Codecov
+        if: matrix.coverage
+        uses: codecov/codecov-action@v1
+        with:
+          files: build/logs/coverage-behat.xml
+          name: behat-symfony-php${{ matrix.php }}
+          flags: behat-symfony
+          fail_ci_if_error: true
+        continue-on-error: true
