--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     },
     "require": {
         "php": ">=7.4",
+        "doctrine/collections": "^1.6",
         "symfony/serializer": "^5.3"
     },
     "require-dev": {
@@ -46,6 +47,7 @@
         "phpstan/phpstan": "^0.12.99",
         "phpstan/phpstan-symfony": "^0.12.44",
         "soyuka/contexts": "^3.3",
+        "symfony/cache": "^5.3",
         "symfony/dotenv": "^5.3",
         "symfony/expression-language": "^5.3",
         "symfony/framework-bundle": "^5.3",
